# oop-course-work

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  main.cpp
Abstractions/: IMiddleware.h  IRequest.h  IResponse.h  IStringFormattable.h
CQRS/: Alias.h
CQRS/Abstractions/: IGenericRequestHandler.h  IMiddleware.h  IRequest.h  IRequestHandler.h  IRequestRouter.h  IRequestSender.h  IResponse.h
CQRS/MIddleware/MiddlewarePipeline/: MiddlewarePipeline.cpp  MiddlewarePipeline.h
CQRS/MIddleware/MidlewarePipeline/: MiddlewarePipeline.cpp  MiddlewarePipeline.h
CQRS/Services/DefaultRequestRouter/: DefaultRequestRouter.cpp  DefaultRequestRouter.h
CQRS/Services/MockRequestHandler/: MockRequestHandler.cpp  MockRequestHandler.h
CQRS/Services/RequestHandler/: RequestHandler.cpp  RequestHandler.h
CQRS/Services/RequestSender/: RequestSender.cpp  RequestSender.h
Features/Common/: FilesRequest.h  FilesRequestHandler.cpp  FilesRequestHandler.h
Features/CountDirectories/: CountDirectoriesRequest.h  CountDirectoriesRequestHandler.cpp  CountDirectoriesRequestHandler.h  CountDirectoriesResponse.h
Features/CountFiles/: CountFilesRequest.h  CountFilesRequestHandler.cpp  CountFilesRequestHandler.h  CountFilesResponse.h
Features/CountTotalSize/: CountTotalSizeRequest.h  CountTotalSizeRequestHandler.cpp  CountTotalSizeRequestHandler.h  CountTotalSizeResponse.h
Features/Exception/: ExceptionRequestHandler.h  ExceptionResponse.h
Features/Exit/: ExitRequest.h  ExitRequestHandler.h  ExitResponse.h
Features/FindDuplicates/: FindDuplicatesRequest.h  FindDuplicatesRequestHandler.cpp  FindDuplicatesRequestHandler.h  FindDuplicatesResponse.h
Features/LargestFiles/: LargestFilesRequest.h  LargestFilesRequestHandler.cpp  LargestFilesRequestHandler.h  LargestFilesResponse.h
Features/Mock/: MockRequest.h  MockRequestHandler.cpp  MockRequestHandler.h  MockResponse.h
Features/NewestFiles/: NewestFilesRequest.h  NewestFilesRequestHandler.cpp  NewestFilesRequestHandler.h  NewestFilesResponse.h
Features/OldestFiles/: OldestFilesRequest.h  OldestFilesRequestHandler.cpp  OldestFilesRequestHandler.h  OldestFilesResponse.h
Features/QueryDirectories/: QueryFilesRequestHandler.cpp
Features/QueryFiles/: QueryFilesRequest.h  QueryFilesRequestHandler.cpp  QueryFilesRequestHandler.h  QueryFilesResponse.h
FileSystem/Abstractions/: IFileSystemEntry.h
FileSystem/Exceptions/: DirectoryNotFoundException.h  FileNotFoundException.h  InvalidFormatException.h
FileSystem/Models/DateTime/: DateTime.h
FileSystem/Models/DirectoryEntry/: DirectoryEntry.cpp  DirectoryEntry.h
FileSystem/Models/FileEntry/: FileEntry.cpp  FileEntry.h
Include/: Aliases.h
Infrastructure/Abstractions/: ILogger.h  IUserInteractor.h
Infrastructure/Application/: Application.cpp  Application.h
Infrastructure/ApplicationBuilder/: ApplicationBuilder.cpp  ApplicationBuilder.h
Infrastructure/MIddleware/ConsoleLoggerMiddleware/: ConsoleLoggerMiddleware.h
Infrastructure/MIddleware/LoggerMiddleware/: LoggerMiddleware.cpp  LoggerMiddleware.h
Infrastructure/Middleware/ExceptionHandlingMiddleware/: ExceptionHandlingMiddleware.cpp  ExceptionHandlingMiddleware.h
Infrastructure/Middleware/FileLoggerMiddleware/: FileLoggerMiddleware.h
Infrastructure/Services/ApplicationRequestRouter/: ApplicationRequestRouter.cpp  ApplicationRequestRouter.h
Infrastructure/Services/ConsoleLogger/: ConsoleLogger.cpp  ConsoleLogger.h
Infrastructure/Services/ConsoleUserInteractor/: ConsoleUserInteractor.cpp  ConsoleUserInteractor.h
Infrastructure/Services/FileLogger/: FileLogger.cpp  FileLogger.h
docs/: My_thesis.out  My_thesis.tex
docs/latex/: My_thesis.aux  My_thesis.bcf  My_thesis.blg  My_thesis.toc
docs/latex/my_folder/: acronyms.tex  appendix2.tex  chapter1.tex  chapter2.tex  conclusion.tex  introduction.tex  references.tex  title.tex
docs/latex/template_settings/common/: renames.tex
docs/my_folder/: appendix1.tex  appendix3.tex  task.tex
src/: main.cpp
src/CQRS/: Alias.h
src/CQRS/Abstractions/: IMiddleware.h  IRequestRouter.h  IRequestSender.h
src/Features/Common/: FilesRequest.h
src/Features/CountDirectories/: CountDirectoriesRequest.h  CountDirectoriesRequestHandler.cpp  CountDirectoriesRequestHandler.h  CountDirectoriesResponse.h
src/Features/CountFiles/: CountFilesRequest.h  CountFilesRequestHandler.cpp  CountFilesResponse.h
src/Features/CountTotalSize/: CountTotalSizeRequest.h  CountTotalSizeRequestHandler.cpp  CountTotalSizeRequestHandler.h  CountTotalSizeResponse.h
src/Features/Exception/: ExceptionRequestHandler.h  ExceptionResponse.h  ExpcetionRequest.h
src/Features/Exit/: ExitRequest.h  ExitResponse.h
src/Features/FindDuplicates/: FindDuplicatesRequest.h  FindDuplicatesRequestHandler.cpp  FindDuplicatesRequestHandler.h  FindDuplicatesResponse.h
src/Features/LargestFiles/: LargestFilesRequestHandler.cpp  LargestFilesRequestHandler.h  LargestFilesResponse.h
src/Features/NewestFiles/: NewestFilesRequest.h  NewestFilesRequestHandler.h  NewestFilesResponse.h
src/FileSystem/Abstractions/: IFileSystemEntry.h
src/FileSystem/Exceptions/: ApplicationException.h  DirectoryNotFoundException.h  FileNotFoundException.h  InvalidFormatException.h
src/FileSystem/Models/DirectoryEntry/: DirectoryEntry.cpp  DirectoryEntry.h
src/FileSystem/Models/FileEntry/: FileEntry.cpp  FileEntry.h
src/Infrastructure/ApplicationBuilder/: ApplicationBuilder.h
src/Infrastructure/Middleware/ExceptionHandlingMiddleware/: ExceptionHandlingMiddleware.cpp
src/Infrastructure/Middleware/LoggerMiddleware/: LoggerMiddleware.cpp  LoggerMiddleware.h
src/Infrastructure/Services/ApplicationRequestRouter/: ApplicationRequestRouter.h
src/Infrastructure/Services/ConsoleLogger/: ConsoleLogger.cpp
src/Infrastructure/Services/ConsoleUserInteractor/: ConsoleUserInteractor.h
