cmake_minimum_required(VERSION 3.25)
project(FileWizard)

set(CMAKE_CXX_STANDARD 23)

add_executable(FileWizard main.cpp
        CQRS/Abstractions/IStringFormattable.h
        CQRS/Alias.h
        CQRS/Abstractions/IRequest.h
        CQRS/Abstractions/IRequest.h
        CQRS/Abstractions/IRequestHandler.h
        CQRS/Abstractions/IMiddleware.h
        CQRS/Abstractions/IResponse.h
        CQRS/Abstractions/IRequestSender.h
        CQRS/Abstractions/IRequestRouter.h
        CQRS/Services/RequestHandler/RequestHandler.cpp
        CQRS/Services/RequestHandler/RequestHandler.h
        CQRS/Services/RequestHandler/RequestHandler.cpp
        CQRS/MIddleware/MiddlewarePipeline/MiddlewarePipeline.cpp
        CQRS/MIddleware/MiddlewarePipeline/MiddlewarePipeline.h
        Infrastructure/Abstractions/ILogger.h
        Infrastructure/Services/ConsoleLogger/ConsoleLogger.cpp
        Infrastructure/Services/ConsoleLogger/ConsoleLogger.h
        Infrastructure/Middleware/LoggerMiddleware/LoggerMiddleware.cpp
        Infrastructure/Middleware/LoggerMiddleware/LoggerMiddleware.h
        Infrastructure/Middleware/ConsoleLoggerMiddleware/ConsoleLoggerMiddleware.h
        CQRS/Services/RequestSender/RequestSender.cpp
        CQRS/Services/RequestSender/RequestSender.h
        Infrastructure/Application/Application.cpp
        Infrastructure/Application/Application.h
        Infrastructure/ApplicationBuilder/ApplicationBuilder.cpp
        Infrastructure/ApplicationBuilder/ApplicationBuilder.h
        Infrastructure/Services/ApplicationRequestRouter/ApplicationRequestRouter.cpp
        Infrastructure/Services/ApplicationRequestRouter/ApplicationRequestRouter.h
        Infrastructure/Abstractions/IUserInteractor.h
        Infrastructure/Services/ConsoleUserInteractor/ConsoleUserInteractor.cpp
        Infrastructure/Services/ConsoleUserInteractor/ConsoleUserInteractor.h
        FileSystem/Abstractions/IFileSystemEntry.h
        FileSystem/Models/DirectoryEntry/DirectoryEntry.cpp
        FileSystem/Models/DirectoryEntry/DirectoryEntry.h
        FileSystem/Models/DirectoryEntry/DirectoryEntry.h
        FileSystem/Models/FileEntry/FileEntry.cpp
        FileSystem/Models/FileEntry/FileEntry.h
        Features/CountDirectories/CountDirectoriesRequest.h
        Features/CountDirectories/CountDirectoriesRequest.h
        Features/CountDirectories/CountDirectoriesResponse.h
        Features/CountDirectories/CountDirectoriesRequestHandler.cpp
        Features/CountDirectories/CountDirectoriesRequestHandler.h
        Infrastructure/Services/FileLogger/FileLogger.cpp
        Infrastructure/Services/FileLogger/FileLogger.h
        Infrastructure/Middleware/FileLoggerMiddleware/FileLoggerMiddleware.h
        Features/CountFiles/CountFilesRequest.h
        Features/CountFiles/CountFilesResponse.h
        Features/CountFiles/CountFilesRequestHandler.cpp
        Features/CountFiles/CountFilesRequestHandler.h
        Features/CountTotalSize/CountTotalSizeRequest.h
        Features/CountTotalSize/CountTotalSizeResponse.h
        Features/CountTotalSize/CountTotalSizeRequestHandler.cpp
        Features/CountTotalSize/CountTotalSizeRequestHandler.h
        Features/FindDuplicates/FindDuplicatesRequest.h
        Features/FindDuplicates/FindDuplicatesResponse.h
        Features/FindDuplicates/FindDuplicatesRequestHandler.cpp
        Features/FindDuplicates/FindDuplicatesRequestHandler.h
        Features/NewestFiles/NewestFilesRequest.h
        Features/NewestFiles/NewestFilesResponse.h
        Features/NewestFiles/NewestFilesRequestHandler.cpp
        Features/NewestFiles/NewestFilesRequestHandler.h
        Features/LargestFiles/LargestFilesRequest.h
        Features/LargestFiles/LargestFilesResponse.h
        Features/LargestFiles/LargestFilesRequestHandler.cpp
        Features/LargestFiles/LargestFilesRequestHandler.h
        Features/Common/FilesRequest.h
        Features/Common/FilesRequestHandler.h
        Features/Exit/ExitRequest.h
        Features/Exit/ExitRequest.h
        Features/Exit/ExitResponse.h
        Features/Exit/ExitRequestHandler.h
        FileSystem/Exceptions/DirectoryNotFoundException.h
        FileSystem/Exceptions/FileNotFoundException.h
        FileSystem/Exceptions/ApplicationException.h
        FileSystem/Exceptions/InvalidFormatException.h
        Infrastructure/Middleware/ExceptionHandlingMiddleware/ExceptionHandlingMiddleware.cpp
        Infrastructure/Middleware/ExceptionHandlingMiddleware/ExceptionHandlingMiddleware.h
        Features/Exception/ExceptionResponse.h
        Features/Exception/ExpcetionRequest.h
        Features/Exception/ExceptionRequestHandler.h
)
