cmake_minimum_required(VERSION 3.25)
project(FileWizard)

set(CMAKE_CXX_STANDARD 23)

add_executable(FileWizard src/main.cpp
        src/CQRS/Abstractions/IStringFormattable.h
        src/CQRS/Alias.h
        src/CQRS/Abstractions/IRequest.h
        src/CQRS/Abstractions/IRequest.h
        src/CQRS/Abstractions/IRequestHandler.h
        src/CQRS/Abstractions/IMiddleware.h
        src/CQRS/Abstractions/IResponse.h
        src/CQRS/Abstractions/IRequestSender.h
        src/CQRS/Abstractions/IRequestRouter.h
        src/CQRS/Services/RequestHandler/RequestHandler.cpp
        src/CQRS/Services/RequestHandler/RequestHandler.h
        src/CQRS/Services/RequestHandler/RequestHandler.cpp
        src/CQRS/MIddleware/MiddlewarePipeline/MiddlewarePipeline.cpp
        src/CQRS/MIddleware/MiddlewarePipeline/MiddlewarePipeline.h
        src/Infrastructure/Abstractions/ILogger.h
        src/Infrastructure/Services/ConsoleLogger/ConsoleLogger.cpp
        src/Infrastructure/Services/ConsoleLogger/ConsoleLogger.h
        src/Infrastructure/Middleware/LoggerMiddleware/LoggerMiddleware.cpp
        src/Infrastructure/Middleware/LoggerMiddleware/LoggerMiddleware.h
        src/Infrastructure/Middleware/ConsoleLoggerMiddleware/ConsoleLoggerMiddleware.h
        src/CQRS/Services/RequestSender/RequestSender.cpp
        src/CQRS/Services/RequestSender/RequestSender.h
        src/Infrastructure/Application/Application.cpp
        src/Infrastructure/Application/Application.h
        src/Infrastructure/ApplicationBuilder/ApplicationBuilder.cpp
        src/Infrastructure/ApplicationBuilder/ApplicationBuilder.h
        src/Infrastructure/Services/ApplicationRequestRouter/ApplicationRequestRouter.cpp
        src/Infrastructure/Services/ApplicationRequestRouter/ApplicationRequestRouter.h
        src/Infrastructure/Abstractions/IUserInteractor.h
        src/Infrastructure/Services/ConsoleUserInteractor/ConsoleUserInteractor.cpp
        src/Infrastructure/Services/ConsoleUserInteractor/ConsoleUserInteractor.h
        src/FileSystem/Abstractions/IFileSystemEntry.h
        src/FileSystem/Models/DirectoryEntry/DirectoryEntry.cpp
        src/FileSystem/Models/DirectoryEntry/DirectoryEntry.h
        src/FileSystem/Models/DirectoryEntry/DirectoryEntry.h
        src/FileSystem/Models/FileEntry/FileEntry.cpp
        src/FileSystem/Models/FileEntry/FileEntry.h
        src/Features/CountDirectories/CountDirectoriesRequest.h
        src/Features/CountDirectories/CountDirectoriesRequest.h
        src/Features/CountDirectories/CountDirectoriesResponse.h
        src/Features/CountDirectories/CountDirectoriesRequestHandler.cpp
        src/Features/CountDirectories/CountDirectoriesRequestHandler.h
        src/Infrastructure/Services/FileLogger/FileLogger.cpp
        src/Infrastructure/Services/FileLogger/FileLogger.h
        src/Infrastructure/Middleware/FileLoggerMiddleware/FileLoggerMiddleware.h
        src/Features/CountFiles/CountFilesRequest.h
        src/Features/CountFiles/CountFilesResponse.h
        src/Features/CountFiles/CountFilesRequestHandler.cpp
        src/Features/CountFiles/CountFilesRequestHandler.h
        src/Features/CountTotalSize/CountTotalSizeRequest.h
        src/Features/CountTotalSize/CountTotalSizeResponse.h
        src/Features/CountTotalSize/CountTotalSizeRequestHandler.cpp
        src/Features/CountTotalSize/CountTotalSizeRequestHandler.h
        src/Features/FindDuplicates/FindDuplicatesRequest.h
        src/Features/FindDuplicates/FindDuplicatesResponse.h
        src/Features/FindDuplicates/FindDuplicatesRequestHandler.cpp
        src/Features/FindDuplicates/FindDuplicatesRequestHandler.h
        src/Features/NewestFiles/NewestFilesRequest.h
        src/Features/NewestFiles/NewestFilesResponse.h
        src/Features/NewestFiles/NewestFilesRequestHandler.cpp
        src/Features/NewestFiles/NewestFilesRequestHandler.h
        src/Features/LargestFiles/LargestFilesRequest.h
        src/Features/LargestFiles/LargestFilesResponse.h
        src/Features/LargestFiles/LargestFilesRequestHandler.cpp
        src/Features/LargestFiles/LargestFilesRequestHandler.h
        src/Features/Common/FilesRequest.h
        src/Features/Common/FilesRequestHandler.h
        src/Features/Exit/ExitRequest.h
        src/Features/Exit/ExitRequest.h
        src/Features/Exit/ExitResponse.h
        src/Features/Exit/ExitRequestHandler.h
        src/FileSystem/Exceptions/DirectoryNotFoundException.h
        src/FileSystem/Exceptions/FileNotFoundException.h
        src/FileSystem/Exceptions/ApplicationException.h
        src/FileSystem/Exceptions/InvalidFormatException.h
        src/Infrastructure/Middleware/ExceptionHandlingMiddleware/ExceptionHandlingMiddleware.cpp
        src/Infrastructure/Middleware/ExceptionHandlingMiddleware/ExceptionHandlingMiddleware.h
        src/Features/Exception/ExceptionResponse.h
        src/Features/Exception/ExpcetionRequest.h
        src/Features/Exception/ExceptionRequestHandler.h
)
